fix tos visibility

--- a/src/main/resources/scss/debris/terms/components/_terms-of-service-prompt.scss
+++ b/src/main/resources/scss/debris/terms/components/_terms-of-service-prompt.scss
@@ -1,5 +1,5 @@
 .terms-of-service-prompt {
-	position: absolute;
+	position: fixed;
 	top: 0; left: 0; right: 0; bottom: 0;
 	display: flex;
 	flex-direction: column;
